syntax = "proto3";

option java_package = "org.bitbucket.cpchain.chain.protos";
option go_package = "protos";

package protos;

import "common.proto";
import "google/api/annotations.proto";

message File {
    string file = 1;
}

service ChainManager {
    // ChainManager is the collection of Ethereum full node-related APIs
    // exposed over the private admin endpoint.
    rpc ExportChain(File) returns (IsOk) {
        option (google.api.http) = {
            post : "/api/v1/admin/exportChain"
            body : "*"
        };
    }
    // ImportChain imports a blockchain from a local file.
    rpc ImportChain(File) returns (IsOk) {
        option (google.api.http) = {
            post : "/api/v1/admin/importChain"
            body : "*"
        };
    }
}